add: DialogController; add: logger configuration; add: configuration; add: profile dialog bindings;

--- a/src/main/resources/assets/bundles/lang_en_US.properties
+++ b/src/main/resources/assets/bundles/lang_en_US.properties
@@ -1,5 +1,7 @@
 dialog.profile.auto=Auto run
 dialog.profile.lang=Language:
+dialog.profile.new=New
+dialog.profile.reload=Restart required
 dialog.profile.run=Run
 dialog.profile.select=Select profile:
 dialog.profile.title=TaskKeeper
