--- a/src/main/resources/assets/bundles/lang_ru_RU.properties
+++ b/src/main/resources/assets/bundles/lang_ru_RU.properties
@@ -1,5 +1,7 @@
 dialog.profile.auto=Выбирать автоматически
 dialog.profile.lang=Язык:
+dialog.profile.new=Новый
+dialog.profile.reload=Требуется перезапуск
 dialog.profile.run=Запуск
 dialog.profile.select=Выберите профиль:
 dialog.profile.title=TaskKeeper
