refactor: DB structure (WIP); add: new profile dialog (WIP);

--- a/src/main/resources/assets/bundles/lang_en_US.properties
+++ b/src/main/resources/assets/bundles/lang_en_US.properties
@@ -1,3 +1,6 @@
+dialog.new_profile.cancel=Cancel
+dialog.new_profile.done=Done
+dialog.new_profile.name=Enter profile name:
 dialog.profile.auto=Auto run
 dialog.profile.lang=Language:
 dialog.profile.new=New
