--- a/src/main/resources/assets/bundles/lang_ru_RU.properties
+++ b/src/main/resources/assets/bundles/lang_ru_RU.properties
@@ -1,3 +1,6 @@
+dialog.new_profile.cancel=Отмена
+dialog.new_profile.done=Готово
+dialog.new_profile.name=Введите имя профиля:
 dialog.profile.auto=Выбирать автоматически
 dialog.profile.lang=Язык:
 dialog.profile.new=Новый
