refactor: LayoutIdentifier and loading; refactor: Dialogs (yes-no as generic);

--- a/src/main/resources/assets/bundles/lang_en_US.properties
+++ b/src/main/resources/assets/bundles/lang_en_US.properties
@@ -1,10 +1,16 @@
+dialog.button.cancel=Cancel
+dialog.button.no=No
+dialog.button.ok=Ok
+dialog.button.none=
+dialog.button.yes=Yes
 dialog.new_profile.cancel=Cancel
 dialog.new_profile.done=Done
 dialog.new_profile.name=Enter profile name:
 dialog.profile.auto=Auto run
 dialog.profile.lang=Language:
-dialog.profile.new=New
 dialog.profile.reload=Restart required
+dialog.profile.remove=Do you want to delete %s profile?
 dialog.profile.run=Run
 dialog.profile.select=Select profile:
 dialog.profile.title=TaskKeeper
+
