--- a/src/main/resources/assets/bundles/lang_ru_RU.properties
+++ b/src/main/resources/assets/bundles/lang_ru_RU.properties
@@ -1,3 +1,8 @@
+dialog.button.cancel=Отмена
+dialog.button.no=Нет
+dialog.button.ok=Ок
+dialog.button.none=
+dialog.button.yes=Да
 dialog.new_profile.cancel=Отмена
 dialog.new_profile.done=Готово
 dialog.new_profile.name=Введите имя профиля:
@@ -8,3 +13,4 @@ dialog.profile.reload=Требуется перезапуск
 dialog.profile.run=Запуск
 dialog.profile.select=Выберите профиль:
 dialog.profile.title=TaskKeeper
+
